--- a/src/components/AddProduct.css
+++ b/src/components/AddProduct.css
@@ -1,14 +1,13 @@
 .form-container{
     text-align: center;
 }
-input[type=text], input[type=number]{
+.AddInputs{
     width: 25%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
     background: #f1f1f1;
-
 }
 .add, .back{
     height: 50px;
@@ -18,6 +17,7 @@ input[type=text], input[type=number]{
     color: white;
     border-style: none;
     cursor: pointer;
+    font-weight: bold;
 }
 .add{
     background-color: green;
