--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -8,6 +8,7 @@ td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+  text-align: center;
 }
 
 tr:nth-child(even) {
@@ -21,6 +22,8 @@ tr:nth-child(even) {
   color: white;
   border-style: none;
   cursor: pointer;
+  align-items: center;
+  justify-content: center;
 }
 .editBtn {
   background-color: rgb(14, 140, 230);
